# erc20-poc

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
c/: ckb.h  ckb_impl_libc.h  ckb_impl_syscall.h  erc20.fbs  erc20.h  sha256.h  validate.c  verify.c
src/: argv_creator.rs  cell_creator.rs  erc20_generated.rs  private_key_generator.rs  riscv.rs  secp256k1_signer.rs
